TODO: slow drag selection on remote display - other things seem fast (rxvt illness, motion hints?)
TODO: default selection should handle = better
WISH: look into XAddConnectionWatch, does anybody need that?
WISH: anyevent mouse notification / manage MotionMask better.
WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
DUMB: support tex fonts

7.6  Fri Feb 10 08:52:36 CET 2006
	- changed interpretation of [alpha] colour prefix.
        - +option now really sets the option to default, instead of using the
          resource value.
        - options that require an argument now really _require_ an argument.
        - the tabbed extension now forwards focus and keys events to th
          relevant tab window.
        - tab colours are now configurable and have sensible defaults
          (initial patch by hednod).
        - option menu is extendable, readline, selection and
          selection-autotransform can now be disabled/enabled at runtime.
        - forcing a configure event to tabbed subwindows with -pe tabbed, for
          the benefit of automove-background.
        - the automove-background extension added a wrong constant offset.
        - force refresh of XA_RESOURCE_STRING on virtual reconnect.
        - return exit status 2 in urxvtc when urxvtd couldn't be contacted.
        - the linux yield hack is back, now using usleep, and enabled only on
          __linux__.
        - further round trip eliminations in the !XFT case by remembering
          the colour components.
        - plain scrollbar works better with -sr.
        - fixed half-shadow scrollbar look.
        - more colour rtt optimisations.
        - properly(?) free colours on window close.
        - reorganised the FAQ into multiple sections.
        - add ISO646.1991-IRV to the list of supported codesets.
        - minor libptytty update.

7.5  Tue Jan 31 15:15:43 CET 2006